Harden sizing equity against zero margin-balance edge case