@@ -2,10 +2,12 @@ package com.example.futuresbot.config;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
+import org.apache.commons.lang3.StringUtils;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Objects;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -30,10 +32,10 @@ public final class ConfigLoader {
 
     private static String resolveEnvPlaceholders(String raw) {
         Matcher matcher = ENV_PATTERN.matcher(raw);
-        StringBuffer output = new StringBuffer();
+        StringBuilder output = new StringBuilder();
         while (matcher.find()) {
             String envName = matcher.group(1);
-            String defaultValue = matcher.group(2) == null ? "" : matcher.group(2);
+            String defaultValue = Objects.isNull(matcher.group(2)) ? "" : matcher.group(2);
             String resolved = System.getenv().getOrDefault(envName, defaultValue);
             matcher.appendReplacement(output, Matcher.quoteReplacement(resolved));
         }
@@ -42,20 +44,20 @@ public final class ConfigLoader {
     }
 
     private static void validate(AppConfig config) {
-        if (config == null) {
+        if (Objects.isNull(config)) {
             throw new IllegalStateException("Config file produced a null AppConfig");
         }
-        if (config.exchange() == null) {
+        if (Objects.isNull(config.exchange())) {
             throw new IllegalStateException("Missing 'exchange' section in config");
         }
-        if (config.trading() == null) {
+        if (Objects.isNull(config.trading())) {
             throw new IllegalStateException("Missing 'trading' section in config");
         }
-        if (config.exchange().apiKey() == null || config.exchange().apiKey().isBlank()) {
+        if (StringUtils.isBlank(config.exchange().apiKey())) {
             throw new IllegalStateException(
                     "Missing Binance API key. Set BINANCE_API_KEY or put apiKey in application.yml");
         }
-        if (config.exchange().apiSecret() == null || config.exchange().apiSecret().isBlank()) {
+        if (Objects.isNull(config.exchange().apiSecret())) {
             throw new IllegalStateException(
                     "Missing Binance API secret. Set BINANCE_API_SECRET or put apiSecret in application.yml");
         }
